[package]
name = "p8020"
version = "0.1.0"
edition = "2021"
authors = ["Andrzej Hunt"]

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.24.0"

[dependencies]
clap = {version = "4.5.13", features = ["derive"] }
libc = "0.2.161"
serialport = "4.4.0"
time = {version = "0.3.36", features = ["formatting", "macros"] }
