[package]
name = "p8020-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.p8020]
path = ".."

[[bin]]
name = "fuzz_test_config_parse_from_csv"
path = "fuzz_targets/fuzz_test_config_parse_from_csv.rs"
test = false
doc = false
bench = false
